causeway-dosx (3.68tk-build20221226-1~@distro@) @distro@; urgency=medium

  * Fix: handle empty environment arrays with no strings, on program entry,
    and for int 0x21, ah = 0x4b.  (Thanks Stas Sergeev for the issue report.)

 -- TK Chia <tkchia@users.noreply.github.com>  Mon, 26 Dec 2022 10:34:37 +0000

causeway-dosx (3.67tk-build20221226-1~@distro@) @distro@; urgency=medium

  * Use UPX rather than (some version of) the CauseWay Compressor to
    compress the CauseWay loader stub.  This yields a smaller stub.

 -- TK Chia <tkchia@users.noreply.github.com>  Mon, 26 Dec 2022 01:35:40 +0000

causeway-dosx (3.66tk-build20221225-2~@distro@) @distro@; urgency=medium

  * Also install uncompressed CauseWay DOS extender stub.

 -- TK Chia <tkchia@users.noreply.github.com>  Sun, 25 Dec 2022 16:52:36 +0000

causeway-dosx (3.66tk-build20221225-1~@distro@) @distro@; urgency=medium

  * Bail out early if executable cannot read self (thanks Stas Sergeev for
    the issue report).

 -- TK Chia <tkchia@users.noreply.github.com>  Sun, 25 Dec 2022 08:50:22 +0000

causeway-dosx (3.65tk-build20221224-3~@distro@) @distro@; urgency=medium

  * Check for null environment segment (thanks Stas Sergeev).
  * Try to build CauseWay debugger.

 -- TK Chia <tkchia@users.noreply.github.com>  Sat, 24 Dec 2022 21:49:58 +0000

causeway-dosx (3.64tk-build20220630-1~@distro@) @distro@; urgency=medium

  * Check that int 0x21 file paths do not overflow transfer buffer.

 -- TK Chia <tkchia@users.noreply.github.com>  Thu, 30 Jun 2022 14:52:46 +0000

causeway-dosx (3.63tk-build20220629-2~@distro@) @distro@; urgency=medium

  * Try to build Michael Devore's CauseWay Compressor.
  * Fix: race condition from concurrent `git submodule update --init`.

 -- TK Chia <tkchia@users.noreply.github.com>  Wed, 29 Jun 2022 20:07:31 +0000

causeway-dosx (3.63tk-build20220331-3~@distro@) @distro@; urgency=medium

  * Tweak MS-DOS 1.x hack in decompressor stub, to work even when stub's