@@ -2,11 +2,14 @@
 *.obj
 *.exe
 *.com
+*.ovl
+*.lib
 *.gh
 *.map
 *.sym
 *.lst
 *.err
+*.3p
 *.tmp
 *.zip
 *~
